[package]
name = "schnorr_mutual_auth_over_tcp_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
blake2 = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
hex = "0.4"
zeroize = "1"
subtle = "2"  
openssl = "0.10.76"
